# METIS

./: .gitignore  .gitmodules  CMakeLists.txt
conf/: gkbuild.cmake
include/: metis.h
libmetis/: metislib.h
